FIX | Border radius on Safari

--- a/components/DocumentTitleBar/style.module.scss
+++ b/components/DocumentTitleBar/style.module.scss
@@ -29,6 +29,7 @@
     color: var(--white-color);
     background: transparent;
     border: none;
+    border-radius: 0;
     outline: none;
     border-bottom: 1px solid transparent;
     padding-bottom: 5px;
